Aha. so that was the problem!

--- a/dada/.htaccess
+++ b/dada/.htaccess
@@ -1,1 +1,5 @@
 DirectoryIndex mail.cgi index.php index.html
+
+# See: http://dadamailproject.com/d/features-restful_web_services.pod.html
+# The below line may need to be uncommented too allow Web Services to work:
+# SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
